ui.frontend/src/main/webpack/etisalat/styles/table.scss
/* ----------------- tables ----------------- */
.table-foot-note {
  padding-left: 1rem;

  p {
    color: $steel-grey;
    font-size: $font16;
    line-height: 22px;
    margin: 0;
    margin-bottom: 0.5rem;
  }
}

.dataTables_wrapper .dataTables_paginate {
  display: flex;
  align-items: center;
}

.table-default-section {
  .dataTables_wrapper {
    .dataTables_info {
      padding-left: 1rem;
    }
  }

  .dataTables_wrapper + .table-foot-note {
    margin-top: 4rem;
  }

  .see-more {
    text-transform: uppercase;
    text-align: right;
    font-size: $font14;
    letter-spacing: 2px;
    line-height: 18px;
    color: $almost-black;
  }
}

.table {
  font-size: 0.875rem;
  border: 0;

  .table-foot-note {
    margin-top: -0.5rem;
  }

  caption {
    color: $almost-black;
    @include font-family-lato;
    font-size: 0.75rem;
    font-weight: 900;
    letter-spacing: 2px;
    line-height: 0.75rem;
    padding: 1rem 0;
    text-transform: uppercase;
  }
  &.table-without-title {
    > tfoot,
    > thead,
    > tbody {
      > tr {
        > th,
        > td {
          border-top: 0;
          border-bottom: 1px solid $light-sand-brown;
        }
      }
    }
  }

  &.table-with-action {
    > tfoot,
    > thead,
    > tbody {
      > tr {
        &:first-child {
          > th,
          > td {
            border-top: 0;
          }
        }
      }
    }
  }

  &.table-striped {
    table {
      > tbody > tr:nth-of-type(odd) {
        background-color: $light-yellow;
      }

      // Cells
      > tfoot,
      > thead,
      > tbody {
        > tr {
          > th,
          > td {
            border: 0;

            &:first-child {
              border-radius: 4px 0 0 4px;
              padding: 0.625rem 1rem;
            }

            &:last-child {
              border-radius: 0 4px 4px 0;
              padding: 0.625rem 1rem;
            }
          }
        }
      }
    }
    @include respond-to-min($desktop) {
      &.five-col td{
        width: 20%;
      }
      &.five-col td{
        width: 25%;
      }
      &.three-col td{
        width: 33.33333%;
      }
      &.two-col td{
        width: 50%;
      }
    }
  }

  .discount {
    .price,
    td,
    th {
      color: $dark-orange !important;
    }
  }
}
/* ... */

